Update relisations data for DataBase  with Code first and enity Framework  (User, Gende and Eating)

--- a/Fitness.BLTests/Fitness.BLTests.csproj
+++ b/Fitness.BLTests/Fitness.BLTests.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Controller\EatingContollerTests.cs" />
     <Compile Include="Controller\ExerciseControllerTests.cs" />
+    <Compile Include="Controller\GenderControllerTests.cs" />
     <Compile Include="Controller\UserControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
