--- a/Fitness.BL/Fitness.BL.csproj
+++ b/Fitness.BL/Fitness.BL.csproj
@@ -52,14 +52,34 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\BaseController.cs" />
-    <Compile Include="Controller\DataBaseSaver.cs" />
+    <Compile Include="Controller\BaseSQLController.cs" />
+    <Compile Include="Controller\GenderController.cs" />
+    <Compile Include="Core\DataBaseSaver.cs" />
     <Compile Include="Controller\EatingContoller.cs" />
     <Compile Include="Controller\ExerciseController.cs" />
-    <Compile Include="Controller\FitnessContext.cs" />
-    <Compile Include="Controller\IDataSaver.cs" />
-    <Compile Include="Controller\SerializeBinaryDataSaver.cs" />
-    <Compile Include="Controller\SerializeXmlDataSaver.cs" />
+    <Compile Include="CoreSQL\FitnessContext.cs" />
+    <Compile Include="CoreSQL\DataBaseSaverSQL.cs" />
+    <Compile Include="IRepository\IDataSaverSQL.cs" />
+    <Compile Include="IRepository\IDataSaver.cs" />
+    <Compile Include="Core\SerializeBinaryDataSaver.cs" />
+    <Compile Include="Core\SerializeXmlDataSaver.cs" />
     <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Migrations\202204051701322_AddNewMigration.cs" />
+    <Compile Include="Migrations\202204051701322_AddNewMigration.designer.cs">
+      <DependentUpon>202204051701322_AddNewMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204051712263_AddUpdateUsersMigration.cs" />
+    <Compile Include="Migrations\202204051712263_AddUpdateUsersMigration.designer.cs">
+      <DependentUpon>202204051712263_AddUpdateUsersMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204051801114_AddUpdateModelMigration.cs" />
+    <Compile Include="Migrations\202204051801114_AddUpdateModelMigration.designer.cs">
+      <DependentUpon>202204051801114_AddUpdateModelMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204051806404_AddUpdateModelMigration1.cs" />
+    <Compile Include="Migrations\202204051806404_AddUpdateModelMigration1.designer.cs">
+      <DependentUpon>202204051806404_AddUpdateModelMigration1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Activity.cs" />
     <Compile Include="Model\Eating.cs" />
@@ -72,6 +92,20 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202204051701322_AddNewMigration.resx">
+      <DependentUpon>202204051701322_AddNewMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204051712263_AddUpdateUsersMigration.resx">
+      <DependentUpon>202204051712263_AddUpdateUsersMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204051801114_AddUpdateModelMigration.resx">
+      <DependentUpon>202204051801114_AddUpdateModelMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204051806404_AddUpdateModelMigration1.resx">
+      <DependentUpon>202204051806404_AddUpdateModelMigration1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
